tests/NormalTests/paczka2/big_fuzzy/34699794.err
Error in line 1: S782 S782 76,8
Error in line 9: J34 S424 345,79
Error in line 8: IL6sL S782 80,2
Error in line 12: 4bOF S782 82,5
Error in line 19: IL6sL S880 0,25
Error in line 16: 9C1mF4 S782 87,7
Error in line 10: IL6sL S880 54,6
Error in line 2: J34 S424 70,6
Error in line 27: 6UucmxswL A232 73,5
Error in line 32: 6UucmxswL S782 43,3
Error in line 39: 4bOF A232 46,1
Error in line 13: S782 A232 75,9
Error in line 47: 4bOF S782 31,53
Error in line 35: CcEQ3z1 S424 75,1
Error in line 52: 6UucmxswL S424 31,7
Error in line 42: S782 S782 72,1
Error in line 67: S782 A232 87,8
Error in line 71: 9C1mF4 S782 4,83
Error in line 63: 9C1mF4 S424 283,8
Error in line 60: J34 A232 10,8
Error in line 86: J34 S782 36,5
Error in line 78: 9C1mF4 S782 11,5
Error in line 99: S782 S424 87,4
Error in line 53: 4bOF S782 110,2
Error in line 103: 9C1mF4 S880 6,0
Error in line 110: CcEQ3z1 S424 17,1
Error in line 116: IL6sL A232 12,9
Error in line 128: CcEQ3z1 A232 61,3
Error in line 133: 6UucmxswL S424 134,9
Error in line 136: 6UucmxswL A232 73,9
Error in line 134: J34 A232 13,0
Error in line 141: 6UucmxswL S880 56,9
Error in line 146: CcEQ3z1 S880 33,7
Error in line 154: S782 S880 53,9
Error in line 159: J34 S424 21,6
Error in line 163: J34 S782 39,8
Error in line 169: 4bOF S782 38,1
Error in line 178: 4bOF S880 88,9
Error in line 185: IL6sL S782 59,7
Error in line 186: IL6sL A232 98,9
Error in line 174: CcEQ3z1 S782 76,8
Error in line 195: 9C1mF4 S424 31,4
Error in line 190: J34 S424 83,4
Error in line 201: CcEQ3z1 S782 34,6
Error in line 204: S782 S880 88,99
Error in line 205: 6UucmxswL S880 239,D
Error in line 196: 9C1mF4 S782 13,3
Error in line 207: IL6sL S424 25,0
Error in line 206: S782 A232 18,9
Error in line 214: S782 S782 6,0
Error in line 216: S782 S424 20,2
Error in line 222: IL6sL S880 75,9
Error in line 225: 6UucmxswL S880 213,7
Error in line 245: 4bOF S880 50,4
